feat: add custom API endpoint support and replace Brave Search with Jina
- Add MIMI_SECRET_API_URL and MIMI_SECRET_API_HOST for custom LLM endpoint
- Replace Brave Search with Jina Search API (MIMI_SECRET_JINA_KEY)
- Update tool_web_search.c to use Jina's markdown response format

--- a/main/mimi_secrets.h.example
+++ b/main/mimi_secrets.h.example
@@ -22,9 +22,13 @@
 #define MIMI_SECRET_MODEL           ""
 #define MIMI_SECRET_MODEL_PROVIDER  "anthropic"
 
+/* Custom API Endpoint (leave empty to use default) */
+#define MIMI_SECRET_API_URL         ""
+#define MIMI_SECRET_API_HOST        ""
+
 /* HTTP Proxy (leave empty or set both) */
 #define MIMI_SECRET_PROXY_HOST      ""
 #define MIMI_SECRET_PROXY_PORT      ""
 
-/* Brave Search API */
-#define MIMI_SECRET_SEARCH_KEY      ""
+/* Jina Search API (replaces Brave Search) */
+#define MIMI_SECRET_JINA_KEY        ""
