--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -5,3 +5,5 @@ dependencies:
     version: '>=5.5.0,<5.6.0'
   espressif/esp_lvgl_port: ^2.3.0
   espressif/esp_lcd_st77916: ^2.0.0
+  espressif/esp_lcd_touch: ^1.2.0
+  espressif/esp_lcd_touch_cst816s: ^1.1.0
