add: implement touch click sound feedback using LEDC
- ui_sound.c/h: simple beep using LEDC on GPIO47 (speaker pin)
- Beep frequency and duration configurable via ui_sound_beep()
- Add ui_sound.c to CMakeLists.txt build

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -29,6 +29,7 @@ idf_component_register(
         "ui/ui_display.c"
         "ui/ui_touch.c"
         "ui/ui_state.c"
+        "ui/ui_sound.c"
     INCLUDE_DIRS
         "."
     REQUIRES
